--- a/Boot-Park/Boot-Park/bin/Boot-Park.dll.config
+++ b/Boot-Park/Boot-Park/bin/Boot-Park.dll.config
@@ -1,12 +1,32 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  
+
   <connectionStrings>
     <add name="MariaDBLocal" connectionString="Server=127.0.0.1;Uid=root;Pwd=root;Database=bootpark;" />
   </connectionStrings>
-    
+
   <system.web>
+    <httpHandlers>
+      <add path="*/ext.axd" verb="*" type="Ext.Net.ResourceHandler"
+        validate="false" />
+    </httpHandlers>
+
+    <httpModules>
+      <add name="DirectRequestModule" type="Ext.Net.DirectRequestModule, Ext.Net" />
+    </httpModules>
+
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
+
+  <system.webServer>
+    <validation validateIntegratedModeConfiguration="false"/>
+    <modules>
+      <add name="DirectRequestModule" preCondition="managedHandler" type="Ext.Net.DirectRequestModule, Ext.Net"/>
+    </modules>
+    <handlers>
+      <add name="DirectRequestHandler" verb="*" path="*/ext.axd" preCondition="integratedMode" type="Ext.Net.ResourceHandler"/>
+    </handlers>
+  </system.webServer>
+
 </configuration>
