--- a/Boot-Park/Boot-Park/bin/Boot-Park.dll.config
+++ b/Boot-Park/Boot-Park/bin/Boot-Park.dll.config
@@ -1,24 +1,26 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <configuration>
-
   <connectionStrings>
-    <add name="MariaDBLocal" connectionString="Server=127.0.0.1;Uid=root;Pwd=root;Database=bootpark;" />
+    <add name="MariaDBLocal" connectionString="Server=127.0.0.1;Uid=root;Pwd=root;Database=bootpark;"/>
   </connectionStrings>
+  <!--
+    Para obtener una descripción de los cambios de web.config, vea http://go.microsoft.com/fwlink/?LinkId=235367.
 
+    Los siguientes atributos se pueden establecer en la etiqueta <httpRuntime>.
+      <system.Web>
+        <httpRuntime targetFramework="4.5" />
+      </system.Web>
+  -->
   <system.web>
     <httpHandlers>
-      <add path="*/ext.axd" verb="*" type="Ext.Net.ResourceHandler"
-        validate="false" />
+      <add path="*/ext.axd" verb="*" type="Ext.Net.ResourceHandler" validate="false"/>
     </httpHandlers>
-
     <httpModules>
-      <add name="DirectRequestModule" type="Ext.Net.DirectRequestModule, Ext.Net" />
+      <add name="DirectRequestModule" type="Ext.Net.DirectRequestModule, Ext.Net"/>
     </httpModules>
-
-    <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2" />
+    <compilation debug="true" targetFramework="4.5"/>
+    <httpRuntime targetFramework="4.5"/>
   </system.web>
-
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false"/>
     <modules>
@@ -28,5 +30,4 @@
       <add name="DirectRequestHandler" verb="*" path="*/ext.axd" preCondition="integratedMode" type="Ext.Net.ResourceHandler"/>
     </handlers>
   </system.webServer>
-
 </configuration>
