--- a/Boot-Park/Boot-Park/bin/Boot-Park.dll.config
+++ b/Boot-Park/Boot-Park/bin/Boot-Park.dll.config
@@ -1,7 +1,7 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <configuration>
   <connectionStrings>
-    <add name="MariaDBLocal" connectionString="Server=127.0.0.1;Uid=root;Pwd=root;Database=bootpark;"/>
+   <add name="MariaDBLocal" connectionString="Server=104.131.189.103;Uid=root;Pwd=kakaroto5;Database=BOOTPARK;"/>
   </connectionStrings>
   <!--
     Para obtener una descripción de los cambios de web.config, vea http://go.microsoft.com/fwlink/?LinkId=235367.
