Agregado la estructura de validación para el modulo de circulación

--- a/Boot-Park/Boot-Park/Boot-Park.csproj
+++ b/Boot-Park/Boot-Park/Boot-Park.csproj
@@ -105,6 +105,7 @@
     <Content Include="View\Private\BootPark\Parametrizacion\Particular.aspx" />
     <Content Include="View\Private\BootPark\Parametrizacion\Vehiculo.aspx" />
     <Content Include="View\Private\Desktop.aspx" />
+    <Content Include="View\Public\BootPark\Circulacion\Validacion.aspx" />
     <Content Include="View\Public\TestPlugin.aspx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -184,6 +185,13 @@
     </Compile>
     <Compile Include="View\Private\Desktop.aspx.designer.cs">
       <DependentUpon>Desktop.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="View\Public\BootPark\Circulacion\Validacion.aspx.cs">
+      <DependentUpon>Validacion.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="View\Public\BootPark\Circulacion\Validacion.aspx.designer.cs">
+      <DependentUpon>Validacion.aspx</DependentUpon>
     </Compile>
     <Compile Include="View\Public\TestPlugin.aspx.cs">
       <DependentUpon>TestPlugin.aspx</DependentUpon>
