--- a/BootParkBiom/BootParkBiom/BootParkBiom.csproj
+++ b/BootParkBiom/BootParkBiom/BootParkBiom.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BootParkBiom</RootNamespace>
     <AssemblyName>BootParkBiom</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -33,8 +33,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Interop.zkemkeeper">
-      <HintPath>..\..\bin\Interop.zkemkeeper.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\Windows\SysWOW64\Interop.zkemkeeper.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
+    <Reference Include="JSONLibrary">
+      <HintPath>..\JSONLibrary.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
