--- a/RFID-Test/RFID/Web.Debug.config
+++ b/RFID-Test/RFID/Web.Debug.config
@@ -9,7 +9,7 @@
   <system.web>
     <!--
       En el ejemplo siguiente, la transformación "Replace" reemplazará toda la 
-      sección <customErrors> del archivo web.config.
+      sección <customErrors> del archivo web.config..
       Tenga en cuenta que, como solo hay una sección customErrors bajo el nodo 
       <system.web>, no es necesario usar el atributo "xdt:Locator".
       
