--- a/Boot-Park/Boot-Park/Web.config
+++ b/Boot-Park/Boot-Park/Web.config
@@ -2,7 +2,7 @@
 <configuration>
   <connectionStrings>
     <!--<add name="MariaDBLocal" connectionString="Server=104.131.189.103;Uid=root;Pwd=kakaroto5;Database=BOOTPARK;"/>-->
-   <add name="MariaDBLocal" connectionString="Server=localhost;Uid=root;Pwd=root;Database=BOOTPARK;"/>
+   <add name="MariaDBLocal" connectionString="Server=localhost;Uid=root;Pwd=bootpark;Database=BOOTPARK;"/>
   </connectionStrings>
   <!--
     Para obtener una descripción de los cambios de web.config, vea http://go.microsoft.com/fwlink/?LinkId=235367.
