--- a/Nagrand/BPark/BPark.csproj
+++ b/Nagrand/BPark/BPark.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="JSONLibrary">
+      <HintPath>..\..\..\..\..\Videos\BootPark-0af27b0e7ba48b40ca5ca0ebdff825ef2abbe313\bin\JSONLibrary.dll</HintPath>
+    </Reference>
     <Reference Include="log4net, Version=1.2.13.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
       <Private>True</Private>
@@ -60,6 +63,7 @@
     <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
     <Reference Include="System.Management" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -77,6 +81,7 @@
     <Compile Include="BPark.Designer.cs">
       <DependentUpon>BPark.cs</DependentUpon>
     </Compile>
+    <Compile Include="DynamicJsonConverter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="ProjectInstaller.cs">
       <SubType>Component</SubType>
