--- a/Tanaris/package.json
+++ b/Tanaris/package.json
@@ -14,6 +14,7 @@
   "author": "BootPark TM",
   "license": "MIT",
   "dependencies": {
-    "johnny-five": "^0.9.41"
+    "johnny-five": "^0.9.41",
+    "socket.io": "^1.4.5"
   }
 }
