Agregado el proyecto kik

--- a/bootpark/Boot-Park/Boot-Park.csproj
+++ b/bootpark/Boot-Park/Boot-Park.csproj
@@ -80,6 +80,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Properties\PublishProfiles\BootPark.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
