--- a/kik/Circulation/Circulation.csproj
+++ b/kik/Circulation/Circulation.csproj
@@ -90,6 +90,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="content\img\gears.gif" />
+    <Content Include="content\js\Circulations.js" />
+    <Content Include="content\js\socket.io-1.4.5.js" />
     <Content Include="View\Public\BootPark\Circulation.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -109,6 +111,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+    <None Include="Properties\PublishProfiles\kik.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
