--- a/kik/Circulation/Circulation.csproj
+++ b/kik/Circulation/Circulation.csproj
@@ -13,7 +13,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Circulation</RootNamespace>
     <AssemblyName>Circulation</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
@@ -93,7 +93,9 @@
     <Content Include="content\js\Circulations.js" />
     <Content Include="content\js\socket.io-1.4.5.js" />
     <Content Include="View\Public\BootPark\Circulation.aspx" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include=".gitignore" />
