agregado funcionarios a la bd, ajuste a la validacion del registro de etiquetas.

--- a/kik/Circulation/Circulation.csproj
+++ b/kik/Circulation/Circulation.csproj
@@ -90,6 +90,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="content\img\gears.gif" />
+    <Content Include="content\img\user.png" />
     <Content Include="content\js\Circulations.js" />
     <Content Include="content\js\socket.io-1.4.5.js" />
     <Content Include="View\Public\BootPark\Circulation.aspx" />
