--- a/bootpark/Boot-Park/Web.config
+++ b/bootpark/Boot-Park/Web.config
@@ -1,8 +1,7 @@
 <?xml version="1.0"?>
 <configuration>
   <connectionStrings>
-    <!--<add name="MariaDBLocal" connectionString="Server=104.131.189.103;Uid=root;Pwd=kakaroto5;Database=BOOTPARK;"/>-->
-    <add name="MariaDBLocal" connectionString="Server=localhost;Uid=root;Pwd=root;Database=bootpark;"/>
+    <add name="MariaDBLocal" connectionString="Server=localhost;Uid=root;Pwd=bootpark;Database=bootpark;"/>
   </connectionStrings>
   <!--
     Para obtener una descripción de los cambios de web.config, vea http://go.microsoft.com/fwlink/?LinkId=235367.
