--- a/kik/Circulation/bin/Circulation.dll.config
+++ b/kik/Circulation/bin/Circulation.dll.config
@@ -1,10 +1,11 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="extnet" type="Ext.Net.GlobalConfig" requirePermission="false"/>
+    <section name="extnet" type="Ext.Net.GlobalConfig" requirePermission="false" />
   </configSections>
+  
   <connectionStrings>
-    <add name="MySQL" connectionString="Server=localhost;Uid=root;Pwd=root;Database=BOOTPARK;"/>
+    <add name="MySQL" connectionString="Server=localhost;Uid=admin;Pwd=admin;Database=BOOTPARK;" />
   </connectionStrings>
   <!--
     Para obtener una descripción de los cambios de web.config, vea http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -15,36 +16,36 @@
       </system.Web>
   -->
   <system.web>
-    <compilation debug="true" targetFramework="4.6"/>
-    <!-- This httpHandlers config only required if using IIS6 (or lower) -->
-    <!--
+    <compilation debug="true" targetFramework="4.5" />
+    
+    
+    
+    
+    <!-- This httpHandlers config only required if using IIS6 (or lower) --><!--
     <httpHandlers>
       <add path="*/ext.axd" verb="*" type="Ext.Net.ResourceHandler" validate="false" />
     </httpHandlers>
-    -->
-    <!-- This httpModules config only required if using IIS6 (or lower) -->
-    <!--
+    --><!-- This httpModules config only required if using IIS6 (or lower) --><!--
     <httpModules>
       <add name="DirectRequestModule" type="Ext.Net.DirectRequestModule, Ext.Net" />
     </httpModules>
-    -->
-    <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID">
-      <controls>
-        <add assembly="Ext.Net" namespace="Ext.Net" tagPrefix="ext"/>
-      </controls>
-      <namespaces>
-        <add namespace="Ext.Net"/>
-      </namespaces>
-    </pages>
+    --><pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID">
+      
+      
+    <controls>
+        <add assembly="Ext.Net" namespace="Ext.Net" tagPrefix="ext" />
+      </controls><namespaces>
+        <add namespace="Ext.Net" />
+      </namespaces></pages>
   </system.web>
-  <extnet theme="Triton" licenseKey="** Ext.NET LICENSE KEY HERE **" initScriptMode="Linked"/>
-  <system.webServer>
-    <validation validateIntegratedModeConfiguration="false"/>
+  
+  
+<extnet theme="Triton" licenseKey="** Ext.NET LICENSE KEY HERE **" initScriptMode="Linked" /><system.webServer>
+    <validation validateIntegratedModeConfiguration="false" />
     <handlers>
-      <add name="DirectRequestHandler" verb="*" path="*/ext.axd" preCondition="integratedMode" type="Ext.Net.ResourceHandler"/>
+      <add name="DirectRequestHandler" verb="*" path="*/ext.axd" preCondition="integratedMode" type="Ext.Net.ResourceHandler" />
     </handlers>
     <modules>
-      <add name="DirectRequestModule" preCondition="managedHandler" type="Ext.Net.DirectRequestModule, Ext.Net"/>
+      <add name="DirectRequestModule" preCondition="managedHandler" type="Ext.Net.DirectRequestModule, Ext.Net" />
     </modules>
-  </system.webServer>
-</configuration>
+  </system.webServer></configuration>
